--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: TensorFlow-Angular
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -24,26 +24,28 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       # configure nodejs
       - name: Configure
         uses: actions/setup-node@v2.1.4
         with:
-          node-version: 12.19.0 
-      
+          node-version: 12.19.0
+
       # Cache Dependency
       - name: Cache Dependency
         uses: actions/cache@v2
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-                    
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       # Install dependency
       - name: Install Dependency
-        run: npm install  
+        run: npm install
 
       # Runs a set of commands using the runners shell
       - name: Build
-        run: 
+        run:
             echo "Init Build Project"
             && npm run build
